unpackaged/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>CompanyCd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>会社コード</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>取引先責任者</relationshipLabel>
        <relationshipName>R00N10000000HJPfEAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactAdd_1__c</fullName>
        <label>①住所</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContactAdd_2__c</fullName>
        <label>②住所</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContactAdd_3__c</fullName>
        <label>③住所</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContactBusho_1__c</fullName>
        <label>①部署</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactBusho_2__c</fullName>
        <label>②部署</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactBusho_3__c</fullName>
        <label>③部署</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactCountryCode_1__c</fullName>
        <label>①国番号</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactEmail2__c</fullName>
        <label>②Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ContactEmail3__c</fullName>
        <label>③Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ContactEmail_1__c</fullName>
        <label>①Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ContactEmail_4__c</fullName>
        <label>④Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ContactEmail_5__c</fullName>
        <label>⑤Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ContactFax_1__c</fullName>
        <label>①FAX</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactFax_2__c</fullName>
        <label>②FAX</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactFax_3__c</fullName>
        <label>③FAX</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactHolidayTel_1__c</fullName>
        <label>①TEL(休日用)</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactHolidayTel_2__c</fullName>
        <label>②TEL(休日用)</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactHolidayTel_3__c</fullName>
        <label>③TEL(休日用)</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactKinmuName_1__c</fullName>
        <label>①勤務先</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactKinmuName_4__c</fullName>
        <label>④勤務先</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactMobile_1__c</fullName>
        <label>①携帯TEL</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactMobile_2__c</fullName>
        <label>②携帯TEL</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactMobile_3__c</fullName>
        <label>③携帯TEL</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactOfficeName_2__c</fullName>
        <label>②勤務先</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactOfficeName_3__c</fullName>
        <label>③勤務先</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactOfficeName_5__c</fullName>
        <label>⑤勤務先</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactRelationship_1__c</fullName>
        <label>①続柄</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>夫</fullName>
                </value>
                <value>
                    <fullName>妻</fullName>
                </value>
                <value>
                    <fullName>息子</fullName>
                </value>
                <value>
                    <fullName>娘</fullName>
                </value>
                <value>
                    <fullName>親戚</fullName>
                </value>
                <value>
                    <fullName>知人</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactRelationship_2__c</fullName>
        <label>②続柄</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>夫</fullName>
                </value>
                <value>
                    <fullName>妻</fullName>
                </value>
                <value>
                    <fullName>息子</fullName>
                </value>
                <value>
                    <fullName>娘</fullName>
                </value>
                <value>
                    <fullName>親戚</fullName>
                </value>
                <value>
                    <fullName>知人</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactRelationship_3__c</fullName>
        <label>③続柄</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>夫</fullName>
                </value>
                <value>
                    <fullName>妻</fullName>
                </value>
                <value>
                    <fullName>息子</fullName>
                </value>
                <value>
                    <fullName>娘</fullName>
                </value>
                <value>
                    <fullName>親戚</fullName>
                </value>
                <value>
                    <fullName>知人</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactShimei_1__c</fullName>
        <label>①氏名</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactShimei_2__c</fullName>
        <label>②氏名</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactShimei_3__c</fullName>
        <label>③氏名</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactTel_1__c</fullName>
        <label>①TEL</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactTel_2__c</fullName>
        <label>②TEL</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactTel_3__c</fullName>
        <label>③TEL</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KokyakuAdd__c</fullName>
        <label>住所</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KokyakuMeiKana__c</fullName>
        <label>顧客名(カナ)</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KokyakuMeiRoma__c</fullName>
        <label>顧客名(ローマ字)</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KokyakuPostcd__c</fullName>
        <label>郵便番号</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KokyakuSeiKana__c</fullName>
        <label>顧客姓(カナ)</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KokyakuSeiRoma__c</fullName>
        <label>顧客姓(ローマ字)</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtaAgency__c</fullName>
        <label>OTA取扱店</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WB契約</fullName>
                </value>
                <value>
                    <fullName>WB以外</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OtaName__c</fullName>
        <label>OTA保険会社名称</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>未確認</fullName>
                </value>
                <value>
                    <fullName>保険なし</fullName>
                </value>
                <value>
                    <fullName>AIU保険会社</fullName>
                </value>
                <value>
                    <fullName>JI傷害火災保険株式会社</fullName>
                </value>
                <value>
                    <fullName>安田火災海上保険株式会社</fullName>
                </value>
                <value>
                    <fullName>安田火災海上保険株式会社　香港支店</fullName>
                </value>
                <value>
                    <fullName>興亜火災海上保険株式会社</fullName>
                </value>
                <value>
                    <fullName>三井海上火災保険株式会社</fullName>
                </value>
                <value>
                    <fullName>住友海上火災保険株式会社</fullName>
                </value>
                <value>
                    <fullName>千代田火災海上保険株式会社</fullName>
                </value>
                <value>
                    <fullName>大成火災海上保険株式会社</fullName>
                </value>
                <value>
                    <fullName>大東京火災海上保険株式会社</fullName>
                </value>
                <value>
                    <fullName>東京海上火災保険株式会社</fullName>
                </value>
                <value>
                    <fullName>東京海上日動火災保険株式会社</fullName>
                </value>
                <value>
                    <fullName>同和火災海上保険株式会社</fullName>
                </value>
                <value>
                    <fullName>日本火災海上保険株式会社</fullName>
                </value>
                <value>
                    <fullName>日産火災海上保険株式会社</fullName>
                </value>
                <value>
                    <fullName>日動火災海上保険株式会社</fullName>
                </value>
                <value>
                    <fullName>富士火災海上保険株式会社</fullName>
                </value>
                <value>
                    <fullName>チューリッヒ保険会社</fullName>
                </value>
                <value>
                    <fullName>ロイヤルサンアライアンス保険会社</fullName>
                </value>
                <value>
                    <fullName>日新火災海上保険株式会社</fullName>
                </value>
                <value>
                    <fullName>朝日火災海上保険株式会社</fullName>
                </value>
                <value>
                    <fullName>共栄火災海上保険株式会社</fullName>
                </value>
                <value>
                    <fullName>シグナ傷害火災保険株式会社</fullName>
                </value>
                <value>
                    <fullName>太陽火災海上保険株式会社</fullName>
                </value>
                <value>
                    <fullName>セゾン自動車火災保険株式会社</fullName>
                </value>
                <value>
                    <fullName>ゼネラリ保険会社</fullName>
                </value>
                <value>
                    <fullName>明治損害保険株式会社</fullName>
                </value>
                <value>
                    <fullName>セコム損害保険株式会社</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>続柄</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>会員本人</fullName>
                </value>
                <value>
                    <fullName>夫</fullName>
                </value>
                <value>
                    <fullName>妻</fullName>
                </value>
                <value>
                    <fullName>息子</fullName>
                </value>
                <value>
                    <fullName>娘</fullName>
                </value>
                <value>
                    <fullName>親戚</fullName>
                </value>
                <value>
                    <fullName>知人</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <label>性別</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>男</fullName>
                </value>
                <value>
                    <fullName>女</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tanto__c</fullName>
        <defaultValue>false</defaultValue>
        <label>担当者</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>x01</fullName>
        <columns>Tanto__c</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <label>01. すべての取引先担当者</label>
    </listViews>
    <listViews>
        <fullName>x03</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>03. 今週登録分</label>
    </listViews>
    <listViews>
        <fullName>x04</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>04. 今月誕生日の取引先担当者</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>